--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -627,6 +627,17 @@ input.form-control.number-of-days {
   .toggles-help-block {
     margin-left: 18%;
   }
+
+  .col-md-offset-2-important {
+    margin-left: 16.6666667% !important;
+  }
+}
+
+.check-box.help-block {
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-top: 0px;
+  margin-bottom: 15px;
 }
 
 // Error pages
