--- a/app/views/admin/resellers/_form.html.erb
+++ b/app/views/admin/resellers/_form.html.erb
@@ -1,4 +1,3 @@
-<% checkbox_options = { label_class: 'col-md-offset-2 col-md-7', control_col: 'col-md-2' } %>
 <%= bootstrap_form_for [:admin, @reseller], layout: :horizontal do |f| %>
   <%= render 'shared/error_messages', model: @reseller %>
   <%= f.text_field :host, required: true, help: t('.host_help') %>
@@ -21,15 +20,13 @@
     </div>
   </div>
 
-  <%= f.text_field :name, required: true: t('.name_help') %>
+  <%= f.text_field :name, required: true, help: t('.name_help') %>
 
   <%= f.text_field :application_name, help: t('.application_name_help') %>
   <%= f.text_field :sms_api_key, help: t('.sms_api_key_help') %>
   <%= f.password_field :sms_api_secret, value: @reseller.sms_api_secret %>
 
-  <%= f.form_group :enable_external_callback, {label: { text: t('activerecord.attributes.customer.enable_external_callback') }}.merge(checkbox_options) do %>
-    <%= f.check_box :enable_external_callback, label: '' %>
-  <% end %>
+  <%= render partial: 'shared/check_box', locals: { form: f, field: :enable_external_callback, label: t('activerecord.attributes.customer.enable_external_callback') } %>
 
   <% if @reseller.enable_external_callback %>
     <fieldset>
