--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -1,12 +1,11 @@
 - javascript 'user'
 - content_for :title, t('.title')
 %h1= t '.title'
-= bootstrap_form_for [:admin, @user], layout: :vertical do |f|
+= bootstrap_form_for [:admin, @user], layout: :horizontal do |f|
   = render 'shared/error_messages', model: @user
   = hidden_field_tag :url, params[:url]
   = f.email_field :email, autocomplete: "off"
   = render partial: 'users/time_zone'
   = f.collection_select :customer_id, @customers, :id, :name, {}, {class: 'form-control'}
-  = f.toggles t 'admin.users.menu.send_email' do
-    = f.check_box :send_email, '', checked: true
+  = render partial: 'shared/check_box', locals: { form: f, field: :send_email, label: t('admin.users.menu.send_email'), options: { checked: true } }
   = f.submit
