--- a/app/views/vehicle_usage_sets/import.html.erb
+++ b/app/views/vehicle_usage_sets/import.html.erb
@@ -1,5 +1,4 @@
 <% javascript 'vehicle_usage_set' %>
-<% checkbox_options = { label_class: 'col-md-offset-2 col-md-7', control_col: 'col-md-2' } %>
 
 <% content_for :title, t('.title') %>
 
@@ -29,18 +28,7 @@
             <b><%= t('.default_configuration_replaced') %></b>
           </p>
         <% end %>
-
-        <%= f.form_group :replace_vehicles, { label: { text: t('.replace_vehicles') } }.merge(checkbox_options)  do %>
-          <%= f.check_box :replace_vehicles, label: '', checked: @customer.default_max_vehicle_usage_sets <= 1 %>
-        <% end %>
-        <div class='form-group'>
-          <div class='col-md-offset-2 col-md-8 field'>
-            <p class="help-block">
-              <%= t '.replace_vehicles_help' %>
-            </p>
-          </div>
-        </div>
-
+        <%= render partial: 'shared/check_box', locals: { form: f, field: :replace_vehicles, label: t('.replace_vehicles'), help: t('.replace_vehicles_help'), options: { checked: @customer.default_max_vehicle_usage_sets <= 1 } } %>
         <%= f.submit message: t('all.verb.import'), icon: 'fa-upload' %>
 
         <div class="form-group">
