Fix delayed_job path

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,7 @@
                       .hidden-menu
                         = t 'admin.users.menu.users'
                 %li.menu-section.menu-list-item
-                  = link_to delayed_job_web_path do
+                  = link_to delayed_job_path do
                     .d-flex.align-items-center.justify-content-center
                       %i.fa.fa-tower-observation.fa-fw
                       .hidden-menu
