Introduce max_ride_ distance and duration

--- a/app/templates/stops/_show.mustache
+++ b/app/templates/stops/_show.mustache
@@ -139,6 +139,12 @@
     {{#out_of_max_distance}}
       <li><i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}</li>
     {{/out_of_max_distance}}
+    {{#out_of_max_ride_distance}}
+      <li><i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}</li>
+    {{/out_of_max_ride_distance}}
+    {{#out_of_max_ride_duration}}
+      <li><i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}</li>
+    {{/out_of_max_ride_duration}}
     {{#out_of_relation}}
       <li><i class="fa fa-link-slash fa-fw" title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_relation{{/i18n}}</li>
     {{/out_of_relation}}
