--- a/app/templates/routes_by_vehicles/_show.mustache
+++ b/app/templates/routes_by_vehicles/_show.mustache
@@ -73,6 +73,12 @@
             {{#route_out_of_max_distance}}
               <li title="{{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}"><i class="fa fa-truck-field fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}</li>
             {{/route_out_of_max_distance}}
+            {{#route_out_of_max_ride_distance}}
+              <li title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}"><i class="fa fa-truck-field fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}</li>
+            {{/route_out_of_max_ride_distance}}
+            {{#route_out_of_max_ride_duration}}
+              <li title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}"><i class="fa fa-truck-field fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}</li>
+            {{/route_out_of_max_ride_duration}}
             {{#route_out_of_relation}}
               <li title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"><i class="fa fa-link-slash fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_relation{{/i18n}}</li>
             {{/route_out_of_relation}}
@@ -154,6 +160,12 @@
             {{#out_of_max_distance}}
               <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i>
             {{/out_of_max_distance}}
+            {{#out_of_max_ride_distance}}
+              <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance_help{{/i18n}}"></i>
+            {{/out_of_max_ride_distance}}
+            {{#out_of_max_ride_duration}}
+              <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i>
+            {{/out_of_max_ride_duration}}
             {{#out_of_relation}}
               <i class="fa fa-link-slash fa-fw" title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"></i>
             {{/out_of_relation}}
@@ -243,6 +255,12 @@
             {{#stop_out_of_max_distance}}
               <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i>
             {{/stop_out_of_max_distance}}
+            {{#out_of_max_ride_distance}}
+              <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance_help{{/i18n}}"></i>
+            {{/out_of_max_ride_distance}}
+            {{#out_of_max_ride_duration}}
+              <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i>
+            {{/out_of_max_ride_duration}}
             {{#no_path}}
               <i class="fa fa-road fa-fw" title="{{#i18n}}plannings.edit.error.no_path_help{{/i18n}}"></i>
             {{/no_path}}
