Change fa max distance/duration icons

--- a/app/templates/routes_by_vehicles/_show.mustache
+++ b/app/templates/routes_by_vehicles/_show.mustache
@@ -71,13 +71,13 @@
               <li title="{{#i18n}}plannings.edit.error.out_of_work_time{{/i18n}}"><i class="fa fa-repeat fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_work_time{{/i18n}}</li>
             {{/route_out_of_work_time}}
             {{#route_out_of_max_distance}}
-              <li title="{{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}"><i class="fa fa-truck-field fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}</li>
+              <li title="{{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}"><i class="fa fa-ruler fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}</li>
             {{/route_out_of_max_distance}}
             {{#route_out_of_max_ride_distance}}
-              <li title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}"><i class="fa fa-truck-field fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}</li>
+              <li title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}"><i class="fa fa-compass-drafting fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}</li>
             {{/route_out_of_max_ride_distance}}
             {{#route_out_of_max_ride_duration}}
-              <li title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}"><i class="fa fa-truck-field fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}</li>
+              <li title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}"><i class="fa fa-stopwatch-20 fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}</li>
             {{/route_out_of_max_ride_duration}}
             {{#route_out_of_relation}}
               <li title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"><i class="fa fa-link-slash fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_relation{{/i18n}}</li>
@@ -158,13 +158,13 @@
               <i class="fa fa-repeat fa-fw" title="{{#i18n}}plannings.edit.error.out_of_work_time_help{{/i18n}}"></i>
             {{/out_of_work_time}}
             {{#out_of_max_distance}}
-              <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i>
+              <i class="fa fa-ruler fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i>
             {{/out_of_max_distance}}
             {{#out_of_max_ride_distance}}
-              <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance_help{{/i18n}}"></i>
+              <i class="fa fa-compass-drafting fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance_help{{/i18n}}"></i>
             {{/out_of_max_ride_distance}}
             {{#out_of_max_ride_duration}}
-              <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i>
+              <i class="fa fa-stopwatch-20 fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i>
             {{/out_of_max_ride_duration}}
             {{#out_of_relation}}
               <i class="fa fa-link-slash fa-fw" title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"></i>
@@ -255,12 +255,6 @@
             {{#stop_out_of_max_distance}}
               <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i>
             {{/stop_out_of_max_distance}}
-            {{#out_of_max_ride_distance}}
-              <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance_help{{/i18n}}"></i>
-            {{/out_of_max_ride_distance}}
-            {{#out_of_max_ride_duration}}
-              <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i>
-            {{/out_of_max_ride_duration}}
             {{#no_path}}
               <i class="fa fa-road fa-fw" title="{{#i18n}}plannings.edit.error.no_path_help{{/i18n}}"></i>
             {{/no_path}}
