--- a/app/templates/stops/_list.mustache
+++ b/app/templates/stops/_list.mustache
@@ -310,8 +310,14 @@
             <li title="{{#i18n}}plannings.edit.error.out_of_work_time{{/i18n}}"><i class="fa fa-repeat fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_work_time{{/i18n}}</li>
           {{/route_out_of_work_time}}
           {{#route_out_of_max_distance}}
-            <li title="{{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}"><i class="fa fa-truck-field fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}</li>
+            <li title="{{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}"><i class="fa fa-ruler fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}</li>
           {{/route_out_of_max_distance}}
+          {{#route_out_of_max_ride_distance}}
+            <li title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}"><i class="fa fa-compass-drafting fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}</li>
+          {{/route_out_of_max_ride_distance}}
+          {{#route_out_of_max_ride_duration}}
+            <li title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}"><i class="fa fa-stopwatch-20 fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}</li>
+          {{/route_out_of_max_ride_duration}}
           {{#route_out_of_relation}}
             <li title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"><i class="fa fa-link-slash fa-fw"></i> {{#i18n}}plannings.edit.error.out_of_relation{{/i18n}}</li>
           {{/route_out_of_relation}}
@@ -411,8 +417,14 @@
                 <i class="fa fa-repeat fa-fw" title="{{#i18n}}plannings.edit.error.out_of_work_time_help{{/i18n}}"></i>
               {{/out_of_work_time}}
               {{#out_of_max_distance}}
-                <i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i>
+                <i class="fa fa-ruler fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i>
               {{/out_of_max_distance}}
+              {{#out_of_max_ride_distance}}
+                <i class="fa fa-compass-drafting fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance_help{{/i18n}}"></i>
+              {{/out_of_max_ride_distance}}
+              {{#out_of_max_ride_duration}}
+                <i class="fa fa-stopwatch-20 fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i>
+              {{/out_of_max_ride_duration}}
               {{#no_path}}
                 <i class="fa fa-road fa-fw" title="{{#i18n}}plannings.edit.error.no_path_help{{/i18n}}"></i>
               {{/no_path}}
@@ -471,6 +483,15 @@
               {{#out_of_relation}}
                 <i class="fa fa-link-slash fa-fw" title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"></i>
               {{/out_of_relation}}
+              {{#out_of_max_distance}}
+                <i class="fa fa-ruler fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i>
+              {{/out_of_max_distance}}
+              {{#out_of_max_ride_distance}}
+                <i class="fa fa-compass-drafting fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance_help{{/i18n}}"></i>
+              {{/out_of_max_ride_distance}}
+              {{#out_of_max_ride_duration}}
+                <i class="fa fa-stopwatch-20 fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i>
+              {{/out_of_max_ride_duration}}
               {{#unmanageable_capacity}}
                 <i class="fa fa-times fa-fw" title="{{#i18n}}plannings.edit.error.unmanageable_capacity_help{{/i18n}}"></i>
               {{/unmanageable_capacity}}
