--- a/app/templates/stops/_show.mustache
+++ b/app/templates/stops/_show.mustache
@@ -137,8 +137,14 @@
       <li><i class="fa fa-repeat fa-fw" title="{{#i18n}}plannings.edit.error.out_of_work_time_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_work_time{{/i18n}}</li>
     {{/out_of_work_time}}
     {{#out_of_max_distance}}
-      <li><i class="fa fa-truck-field fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}</li>
+      <li><i class="fa fa-ruler fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_distance_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_max_distance{{/i18n}}</li>
     {{/out_of_max_distance}}
+    {{#out_of_max_ride_distance}}
+      <li><i class="fa fa-compass-drafting fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_distance_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_distance{{/i18n}}</li>
+    {{/out_of_max_ride_distance}}
+    {{#out_of_max_ride_duration}}
+      <li><i class="fa fa-stopwatch-20 fa-fw" title="{{#i18n}}plannings.edit.error.out_of_max_ride_duration_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_max_ride_duration{{/i18n}}</li>
+    {{/out_of_max_ride_duration}}
     {{#out_of_relation}}
       <li><i class="fa fa-link-slash fa-fw" title="{{#i18n}}plannings.edit.error.out_of_relation_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_relation{{/i18n}}</li>
     {{/out_of_relation}}
