--- a/app/views/reporting/index.html.erb
+++ b/app/views/reporting/index.html.erb
@@ -12,17 +12,13 @@
 
     <%= f.hidden_field :customer_id, value: current_user.customer.id %>
 
-    <%= f.text_field :begin_date, t('.begin_date'), {placeholder: t('.default_begin_date'), value: l((Date.today - 8.days).to_time, format: :datepicker), input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'})} %>
+    <%= f.text_field :begin_date, name: t('.begin_date'), placeholder: t('.default_begin_date'), value: l((Date.today - 8.days).to_time, format: :datepicker), input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'}) %>
 
-    <%= f.text_field :end_date, t('.end_date'), { placeholder: t('.default_end_date'), value: l(Date.yesterday.to_time, format: :datepicker), input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'})} %>
+    <%= f.text_field :end_date, name: t('.end_date'), placeholder: t('.default_end_date'), value: l(Date.yesterday.to_time, format: :datepicker), input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'}) %>
 
-    <%= f.form_group  :with_actions, label: { text: t '.with_actions' } do %>
-          <%= f.check_box :with_actions %>
-    <% end %>
+    <%= render partial: 'shared/check_box', locals: { form: f, field: :with_actions, label: t('.with_actions') } %>
 
-    <div class="col-md-offset-2 col-md-6">
-      <%= f.submit t('.submit'), id: 'download-reporting', data: { disable_with: t('.downloading') } %>
-    </div>
+    <%= f.submit message: t('.submit'), action: 'download-reporting', disable_with: t('.downloading') %>
   <% end %>
 </div>
 
