--- a/app/views/users/password.html.erb
+++ b/app/views/users/password.html.erb
@@ -21,9 +21,7 @@
           <%= f.password_field :password, autocomplete: "off" %>
           <%= f.password_field :password_confirmation, autocomplete: "off" %>
 
-          <%= f.actions(class: 'col-md-offset-3 col-md-6') do %>
-            <%= f.submit t('users.set_password.action'), {}, 'fa-check' %>
-          <% end %>
+          <%= f.submit message: t('users.set_password.action'), icon: 'fa-check' %>
         <% end -%>
       </div>
     </div>
