Hide planning header form labels

--- a/app/views/plannings/_flat_form.html.haml
+++ b/app/views/plannings/_flat_form.html.haml
@@ -5,14 +5,14 @@
     - if @planning.customer.enable_references
       .col
         - if @planning.id
-          = f.text_field :ref, { placeholder: t('activerecord.attributes.planning.ref_help'), label: '' }
+          = f.text_field :ref, { placeholder: t('activerecord.attributes.planning.ref_help'), label_class: 'hidden' }
         - else
           = f.text_field :ref do
             %p.help-block= t('activerecord.attributes.planning.ref_help')
     .col
-      = f.text_field :name, required: true, placeholder: "#{t('activerecord.attributes.planning.name')}"
+      = f.text_field :name, required: true, placeholder: "#{t('activerecord.attributes.planning.name')},", label_class: 'hidden'
     .col
-      = f.text_field :date, { placeholder: t('plannings.form.default_date'), value: @planning.date ? l(@planning.date.to_time, format: :datepicker) : nil, input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'})}
+      = f.text_field :date, { placeholder: t('plannings.form.default_date'), value: @planning.date ? l(@planning.date.to_time, format: :datepicker) : nil, input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'}), label_class: 'hidden'}
     - if @planning.new_record?
       = zoning_select f, @planning, t('plannings.edit.zonings.label')
     .col.d-flex
