--- a/app/assets/stylesheets/destinations.css.scss
+++ b/app/assets/stylesheets/destinations.css.scss
@@ -356,6 +356,10 @@
   .tablesorter-pager {
     padding: 5px;
   }
+
+  .pager {
+    margin: unset;
+  }
   /* pager wrapper, in thead/tfoot */
   td.tablesorter-pager {
     background-color: #e6eeee;
@@ -371,14 +375,8 @@
   /* pager output text */
   .tablesorter-pager .pagedisplay {
     padding: 0 5px 0 5px;
-    width: 50px;
+    width: 80px;
     text-align: center;
-  }
-
-  /* pager element reset (needed for bootstrap) */
-  .tablesorter-pager select {
-    margin: 0;
-    padding: 0;
   }
 
   /*** css used when "updateArrows" option is true ***/
